--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=jessica
+spring.datasource.password=Mybancodedados
