--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=jessica
 spring.datasource.password=Mybancodedados
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
